--- a/css/style.css
+++ b/css/style.css
@@ -312,32 +312,37 @@ p {
 
 #wrapper {
   position: relative;
-  display: block; }
+  display: block;
+  overflow: hidden; }
 
 /*------scroll bar---------------------*/
 ::-webkit-scrollbar {
   width: 5px;
-  height: 7px; }
+  height: 7px;
+  z-index: 1004; }
 
 ::-webkit-scrollbar-button {
   width: 0px;
-  height: 0px; }
+  height: 0px;
+  z-index: 1004; }
 
 ::-webkit-scrollbar-thumb {
-  background: #525965;
+  background: #333333;
   border: 0px none #ffffff;
-  border-radius: 0px; }
+  border-radius: 0px;
+  z-index: 1004; }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: #525965; }
+  background: #333333; }
 
 ::-webkit-scrollbar-thumb:active {
-  background: #525965; }
+  background: #333333; }
 
 ::-webkit-scrollbar-track {
   background: transparent;
   border: 0px none #ffffff;
-  border-radius: 50px; }
+  border-radius: 50px;
+  z-index: 1004; }
 
 ::-webkit-scrollbar-track:hover {
   background: transparent; }
@@ -521,12 +526,14 @@ p {
     .navigation-container .main-menu .nav-menu {
       display: block;
       width: 100%;
-      height: auto; }
+      height: auto;
+      z-index: 1000; }
       .navigation-container .main-menu .nav-menu .nav-main-menu {
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 100%; }
+        width: 100%;
+        z-index: 1000; }
         .navigation-container .main-menu .nav-menu .nav-main-menu li.nav-item {
           width: 100%;
           height: 100px;
@@ -575,7 +582,8 @@ p {
         visibility: hidden;
         position: absolute;
         top: 0;
-        left: 0;
+        left: 100px;
+        width: 10%;
         width: 100px;
         height: 100%;
         background-color: #e50000;
@@ -586,7 +594,7 @@ p {
           display: block;
           position: absolute;
           top: 200px;
-          width: 100%;
+          width: 100px;
           margin: auto;
           z-index: 999; }
           .navigation-container .main-menu .nav-menu .nav-main-menu .has-child-menu .nav-has-child-menu li.nav-item-child a.nav-link-child {
@@ -601,12 +609,14 @@ p {
               position: absolute;
               top: 0;
               right: -2rem;
+              visibility: hidden;
               color: #ffffff;
               font-size: 1rem;
               transition: all 0.5s ease-out;
               font-family: 'Font Awesome 5 Free';
               font-weight: 900; }
             .navigation-container .main-menu .nav-menu .nav-main-menu .has-child-menu .nav-has-child-menu li.nav-item-child a.nav-link-child:hover::before {
+              visibility: visible;
               right: 0;
               transition: all 0.5s ease-in; }
             .navigation-container .main-menu .nav-menu .nav-main-menu .has-child-menu .nav-has-child-menu li.nav-item-child a.nav-link-child .nav-child-img {
@@ -632,8 +642,9 @@ p {
       .navigation-container .main-menu .nav-menu .nav-main-menu .has-child-menu.active {
         visibility: visible;
         transition: all 0.5s ease-in;
-        left: 100px;
-        opacity: 1; }
+        width: 100%;
+        opacity: 1;
+        z-index: 999; }
     .navigation-container .main-menu .language {
       display: block;
       position: absolute;
@@ -715,7 +726,8 @@ p {
       margin-left: auto; }
       .main-footer .license .license-brands p {
         font: 1rem "Arial";
-        color: #ffffff; }
+        color: #ffffff;
+        margin-bottom: 0; }
 
 .swiper-button-next, .swiper-container-rtl .swiper-button-prev {
   background-image: url(../../images/icon/arrow-next.png);
@@ -752,6 +764,239 @@ p {
   100% {
     transform: scale(2);
     opacity: 0; } }
+
+.holder {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  bottom: 0px;
+  right: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: #333333; }
+
+.preloader {
+  /* size */
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  animation: rotatePreloader 2s infinite ease-in; }
+
+@keyframes rotatePreloader {
+  0% {
+    transform: translateX(-50%) translateY(-50%) rotateZ(0deg); }
+  100% {
+    transform: translateX(-50%) translateY(-50%) rotateZ(-360deg); } }
+
+.preloader div {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0; }
+
+.preloader div:before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 0%;
+  width: 10%;
+  height: 10%;
+  background-color: #ffffff;
+  transform: translateX(-50%);
+  border-radius: 50%; }
+
+.preloader div:nth-child(1) {
+  transform: rotateZ(0deg);
+  animation: rotateCircle1 2s infinite linear;
+  z-index: 9; }
+
+@keyframes rotateCircle1 {
+  0% {
+    opacity: 0; }
+  0% {
+    opacity: 1;
+    transform: rotateZ(36deg); }
+  7% {
+    transform: rotateZ(0deg); }
+  57% {
+    transform: rotateZ(0deg); }
+  100% {
+    transform: rotateZ(-324deg);
+    opacity: 1; } }
+
+.preloader div:nth-child(2) {
+  transform: rotateZ(36deg);
+  animation: rotateCircle2 2s infinite linear;
+  z-index: 8; }
+
+@keyframes rotateCircle2 {
+  5% {
+    opacity: 0; }
+  5.0001% {
+    opacity: 1;
+    transform: rotateZ(0deg); }
+  12% {
+    transform: rotateZ(-36deg); }
+  62% {
+    transform: rotateZ(-36deg); }
+  100% {
+    transform: rotateZ(-324deg);
+    opacity: 1; } }
+
+.preloader div:nth-child(3) {
+  transform: rotateZ(72deg);
+  animation: rotateCircle3 2s infinite linear;
+  z-index: 7; }
+
+@keyframes rotateCircle3 {
+  10% {
+    opacity: 0; }
+  10.0002% {
+    opacity: 1;
+    transform: rotateZ(-36deg); }
+  17% {
+    transform: rotateZ(-72deg); }
+  67% {
+    transform: rotateZ(-72deg); }
+  100% {
+    transform: rotateZ(-324deg);
+    opacity: 1; } }
+
+.preloader div:nth-child(4) {
+  transform: rotateZ(108deg);
+  animation: rotateCircle4 2s infinite linear;
+  z-index: 6; }
+
+@keyframes rotateCircle4 {
+  15% {
+    opacity: 0; }
+  15.0003% {
+    opacity: 1;
+    transform: rotateZ(-72deg); }
+  22% {
+    transform: rotateZ(-108deg); }
+  72% {
+    transform: rotateZ(-108deg); }
+  100% {
+    transform: rotateZ(-324deg);
+    opacity: 1; } }
+
+.preloader div:nth-child(5) {
+  transform: rotateZ(144deg);
+  animation: rotateCircle5 2s infinite linear;
+  z-index: 5; }
+
+@keyframes rotateCircle5 {
+  20% {
+    opacity: 0; }
+  20.0004% {
+    opacity: 1;
+    transform: rotateZ(-108deg); }
+  27% {
+    transform: rotateZ(-144deg); }
+  77% {
+    transform: rotateZ(-144deg); }
+  100% {
+    transform: rotateZ(-324deg);
+    opacity: 1; } }
+
+.preloader div:nth-child(6) {
+  transform: rotateZ(180deg);
+  animation: rotateCircle6 2s infinite linear;
+  z-index: 4; }
+
+@keyframes rotateCircle6 {
+  25% {
+    opacity: 0; }
+  25.0005% {
+    opacity: 1;
+    transform: rotateZ(-144deg); }
+  32% {
+    transform: rotateZ(-180deg); }
+  82% {
+    transform: rotateZ(-180deg); }
+  100% {
+    transform: rotateZ(-324deg);
+    opacity: 1; } }
+
+.preloader div:nth-child(7) {
+  transform: rotateZ(216deg);
+  animation: rotateCircle7 2s infinite linear;
+  z-index: 3; }
+
+@keyframes rotateCircle7 {
+  30% {
+    opacity: 0; }
+  30.0006% {
+    opacity: 1;
+    transform: rotateZ(-180deg); }
+  37% {
+    transform: rotateZ(-216deg); }
+  87% {
+    transform: rotateZ(-216deg); }
+  100% {
+    transform: rotateZ(-324deg);
+    opacity: 1; } }
+
+.preloader div:nth-child(8) {
+  transform: rotateZ(252deg);
+  animation: rotateCircle8 2s infinite linear;
+  z-index: 2; }
+
+@keyframes rotateCircle8 {
+  35% {
+    opacity: 0; }
+  35.0007% {
+    opacity: 1;
+    transform: rotateZ(-216deg); }
+  42% {
+    transform: rotateZ(-252deg); }
+  92% {
+    transform: rotateZ(-252deg); }
+  100% {
+    transform: rotateZ(-324deg);
+    opacity: 1; } }
+
+.preloader div:nth-child(9) {
+  transform: rotateZ(288deg);
+  animation: rotateCircle9 2s infinite linear;
+  z-index: 1; }
+
+@keyframes rotateCircle9 {
+  40% {
+    opacity: 0; }
+  40.0008% {
+    opacity: 1;
+    transform: rotateZ(-252deg); }
+  47% {
+    transform: rotateZ(-288deg); }
+  97% {
+    transform: rotateZ(-288deg); }
+  100% {
+    transform: rotateZ(-324deg);
+    opacity: 1; } }
+
+.preloader div:nth-child(10) {
+  transform: rotateZ(324deg);
+  animation: rotateCircle10 2s infinite linear;
+  z-index: 0; }
+
+@keyframes rotateCircle10 {
+  45% {
+    opacity: 0; }
+  45.0009% {
+    opacity: 1;
+    transform: rotateZ(-288deg); }
+  52% {
+    transform: rotateZ(-324deg); }
+  102% {
+    transform: rotateZ(-324deg); }
+  100% {
+    transform: rotateZ(-324deg);
+    opacity: 1; } }
 
 #id-modal {
   display: none;
@@ -1039,13 +1284,41 @@ p {
     list-style-type: none; }
     .network-social-fixed .nav-network-social-fixed li {
       margin-bottom: 1px;
-      width: 60px;
+      width: auto;
       height: 55px;
       background-color: #ff0000;
       display: flex;
       justify-content: center;
       align-items: center;
-      z-index: 1000; }
+      border-top-left-radius: 5px;
+      border-bottom-left-radius: 5px;
+      z-index: 1000;
+      transition: all 0.5s ease-out;
+      transform: translateX(252px); }
+      .network-social-fixed .nav-network-social-fixed li a {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        text-decoration: none;
+        padding: 0 1rem;
+        width: 100%; }
+        .network-social-fixed .nav-network-social-fixed li a img {
+          display: block;
+          padding-right: 1rem;
+          float: left; }
+        .network-social-fixed .nav-network-social-fixed li a p {
+          font: 1rem "Arial";
+          color: #ffffff;
+          text-transform: uppercase;
+          margin-bottom: 0;
+          float: left; }
+        .network-social-fixed .nav-network-social-fixed li a span {
+          font: bold 1.1rem "Arial";
+          color: #ffffff;
+          padding-left: 0.7rem; }
+      .network-social-fixed .nav-network-social-fixed li:hover {
+        transform: translateX(0px);
+        transition: all 0.5s ease-in; }
 
 .scroll-top {
   visibility: hidden;
@@ -1102,13 +1375,41 @@ p {
     list-style-type: none; }
     .network-social-fixed .nav-network-social-fixed li {
       margin-bottom: 1px;
-      width: 60px;
+      width: auto;
       height: 55px;
       background-color: #ff0000;
       display: flex;
       justify-content: center;
       align-items: center;
-      z-index: 1000; }
+      border-top-left-radius: 5px;
+      border-bottom-left-radius: 5px;
+      z-index: 1000;
+      transition: all 0.5s ease-out;
+      transform: translateX(252px); }
+      .network-social-fixed .nav-network-social-fixed li a {
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        text-decoration: none;
+        padding: 0 1rem;
+        width: 100%; }
+        .network-social-fixed .nav-network-social-fixed li a img {
+          display: block;
+          padding-right: 1rem;
+          float: left; }
+        .network-social-fixed .nav-network-social-fixed li a p {
+          font: 1rem "Arial";
+          color: #ffffff;
+          text-transform: uppercase;
+          margin-bottom: 0;
+          float: left; }
+        .network-social-fixed .nav-network-social-fixed li a span {
+          font: bold 1.1rem "Arial";
+          color: #ffffff;
+          padding-left: 0.7rem; }
+      .network-social-fixed .nav-network-social-fixed li:hover {
+        transform: translateX(0px);
+        transition: all 0.5s ease-in; }
 
 .scroll-top {
   visibility: hidden;
@@ -2329,3 +2630,51 @@ div.zoom__image {
   background-color: #ffffff;
   z-index: 9999;
   transition: box-shadow 0.5s ease-in; }
+
+.hot-ads {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 1111; }
+  .hot-ads .hot-img {
+    position: relative;
+    display: block;
+    top: 50%;
+    left: 50%;
+    width: 70vw;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%); }
+    .hot-ads .hot-img img {
+      width: 100%;
+      object-fit: cover;
+      box-shadow: 3px 3px 16px black, -3px -3px 15px black;
+      border-radius: 3px; }
+  .hot-ads .btn-close {
+    top: -15px;
+    right: -15px;
+    width: 36px;
+    height: 36px;
+    border-radius: 50%;
+    border: 1px solid #cccccc;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 1115;
+    position: absolute;
+    cursor: pointer; }
+    .hot-ads .btn-close::before {
+      content: '\f00d';
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      font-size: 1.5rem;
+      padding: 0.5rem;
+      color: #ffffff;
+      transform: translate(-50%, -50%);
+      -webkit-transform: translate(-50%, -50%);
+      -moz-transform: translate(-50%, -50%);
+      font-family: 'Font Awesome 5 Free';
+      font-weight: 900; }
