--- a/scss/Base/_reset.scss
+++ b/scss/Base/_reset.scss
@@ -13,32 +13,37 @@ p{
 #wrapper{
     position: relative;
     display: block;
+    overflow: hidden;
 }
 /*------scroll bar---------------------*/
 
 ::-webkit-scrollbar {
     width: 5px;
     height: 7px;
+    z-index: 1004;
   }
   ::-webkit-scrollbar-button {
     width: 0px;
     height: 0px;
+    z-index: 1004;
   }
   ::-webkit-scrollbar-thumb {
-    background: #525965;
+    background: rgb(51, 51, 51);
     border: 0px none #ffffff;
     border-radius: 0px;
+    z-index: 1004;
   }
   ::-webkit-scrollbar-thumb:hover {
-    background: #525965;
+    background: rgb(51, 51, 51);
   }
   ::-webkit-scrollbar-thumb:active {
-    background: #525965;
+    background: rgb(51, 51, 51);
   }
   ::-webkit-scrollbar-track {
     background: transparent;
     border: 0px none #ffffff;
     border-radius: 50px;
+    z-index: 1004;
   }
   ::-webkit-scrollbar-track:hover {
     background: transparent;
