--- a/scss/Components/_nav-menu.scss
+++ b/scss/Components/_nav-menu.scss
@@ -27,9 +27,11 @@
             display: block;
             width: 100%;
             height: auto;
+            z-index: 1000;
             .nav-main-menu{
                 @include flex(center,center);
                 @include size(100%,null);
+                z-index: 1000;
                 li.nav-item{
                     @include size(100%,100px);
                     @include flex(center,center);
@@ -76,7 +78,8 @@
                     visibility: hidden;
                     position: absolute;
                     top: 0;
-                    left: 0;
+                    left: 100px;
+                    width: 10%;
                     @include size(100px,100%);
                     background-color: $color-active;
                     z-index: 999;
@@ -86,7 +89,7 @@
                         display: block;
                         position: absolute;
                         top: 200px;
-                        width: 100%;
+                        width: 100px;
                         margin: auto;
                         z-index: 999;
                         li.nav-item-child{
@@ -99,6 +102,7 @@
                                 position: relative;
                                 &::before{
                                     @include content-empty('\f0d9',0,null,-2rem,null);
+                                    visibility: hidden;
                                     color: $color-w;
                                     font-size: 1rem;
                                     transition: all 0.5s ease-out;
@@ -107,6 +111,7 @@
                                 }
                                 &:hover{
                                         &::before{
+                                            visibility: visible;
                                             right: 0;
                                             transition: all 0.5s ease-in;
                                     }
@@ -142,8 +147,9 @@
                 .has-child-menu.active{
                     visibility: visible;
                     transition: all 0.5s ease-in;
-                    left: 100px;
+                    width: 100%;
                     opacity: 1;
+                    z-index: 999;
                 }
                 }
         }
