--- a/scss/Components/_preloader.scss
+++ b/scss/Components/_preloader.scss
@@ -4,14 +4,15 @@ $size: 100;
 $color: #ffffff;
 
 .holder {
-  position: absolute;
+  position: fixed;
   left: 0px;
   top: 0px;
   bottom: 0px;
   right: 0px;
   width: 100%;
   height: 100%;
-  background-color:  rgb(51, 51, 51);
+  background-color:  rgba(0, 0, 0,0.8);
+  z-index: 1120;
 }
 
 .preloader {
@@ -21,7 +22,7 @@ $color: #ffffff;
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translateX(-50%) translateY(-50%);
+  transform: translate(-50%,-50%);
   animation: rotatePreloader $time + s infinite ease-in;
 }
 @keyframes rotatePreloader {
