--- a/scss/Layout/_product-details.scss
+++ b/scss/Layout/_product-details.scss
@@ -55,3 +55,6 @@ div.zoom__image {
     z-index: 9999;
     transition: box-shadow 0.5s ease-in;
 }
+#param-1,#param-2,#param-3,#param-4,#param-5,#param-6,#param-7,#param-8,#param-9{
+  transition: all 0.5s ease-in;
+}
