--- a/scss/Layout/_home.scss
+++ b/scss/Layout/_home.scss
@@ -4,6 +4,10 @@
     position: relative;
     overflow: hidden;
     display: block;
+    transition: all 0.5s ease-out;
+}
+.main-footer{
+    transition: all 0.5s ease-out;
 }
 .main.change,.main-footer.change{
     margin-left: 200px;
