--- a/scss/Pages/abouts/_community.scss
+++ b/scss/Pages/abouts/_community.scss
@@ -9,4 +9,54 @@
             line-height: 1.8rem;
         }
     }
+    .images{
+        width: 50%;
+        display: block;
+        padding-left: 2rem;
+        padding-right: 2rem;
+        .images-container{
+            @include grid(
+                repeat(8,1fr),
+                repeat(8,1fr)
+            );
+            grid-column-gap: 1rem;
+            grid-row-gap: 1rem;
+            a:nth-child(1){
+                grid-column: 2/5;
+                grid-row: 2/5;
+                img{
+                    @include img-ob(100%,cover);
+                    height: 100%;
+                    border-radius: 0.8rem;
+                }
+            }
+            a:nth-child(2){
+                grid-column: 5/9;
+                grid-row:1/5;
+                img{
+                    @include img-ob(100%,cover);
+                    height: 100%;
+                    border-radius: 0.8rem;
+                }
+            }
+            a:nth-child(3){
+                grid-column: 3/5;
+                grid-row: 5/7;
+                img{
+                    @include img-ob(100%,cover);
+                    height: 100%;
+                    border-radius: 0.8rem;
+                }
+            }
+            a:nth-child(4){
+                grid-column: 5/8;
+                grid-row: 5/8;
+                img{
+                    @include img-ob(100%,cover);
+                    height: 100%;
+                    border-radius: 0.8rem;
+                }
+            }
+        }
+    }
 }
